SFUSA/force-app/main/default/objects/Brand_Country_Region_State_Allocation__c/fields/Brand_Country_Region_Allocation__c.field-meta.xml
<CustomField>
        <fullName>Brand_Country_Region_Allocation__c</fullName>
        <description>PS-MC-SB-13 to manage Brand Country Region Allocation for this time period</description>
        <label>Region Level Allocation</label>
        <referenceTo>Brand_Country_Region_Allocation__c</referenceTo>
        <relationshipLabel>State Level Allocations</relationshipLabel>
        <relationshipName>Brand_Country_Region_State_Allocations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>