SFUSA/force-app/main/default/objects/Brand_Country_Region_State_Allocation__c/fields/Country_Allocation__c.field-meta.xml
<CustomField>
        <fullName>Country_Allocation__c</fullName>
        <description>PS-MC-SB-13 to manage Brand Country Allocation for this time period</description>
        <formula>Brand_Country_Region_Allocation__r.Brand_Country_Allocation__c</formula>
        <label>Country Allocation</label>
        <type>Text</type>
    </CustomField>