SFUSA/force-app/main/default/objects/Brand_Country_Region_State_Allocation__c/fields/External_Id__c.field-meta.xml
<CustomField>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>