SFUSA/force-app/main/default/objects/Brand_Country_Region_State_Allocation__c/fields/Is_Leaf_Node__c.field-meta.xml
<CustomField>
        <fullName>Is_Leaf_Node__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PS-MC-SB-13 to manage if Brand Country Region state Allocation is leaf node or not</description>
        <label>Is Leaf Node</label>
        <type>Checkbox</type>
    </CustomField>