SFUSA/force-app/main/default/objects/Brand_Country_Region_State_Allocation__c/fields/State__c.field-meta.xml
<CustomField>
        <fullName>State__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>PS-MC-SB-13 to manage state for this time period</description>
        <label>State</label>
        <referenceTo>State__c</referenceTo>
        <relationshipName>Brand_Country_Region_State_Allocations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </CustomField>