SFUSA/force-app/main/default/objects/Brand_Country_Region_State_Allocation__c/listViews/KCB_July.listView-meta.xml
<ListView>
        <fullName>KCB_July</fullName>
        <columns>NAME</columns>
        <columns>Allocations_Per_Interval__c</columns>
        <columns>Used_Allocations__c</columns>
        <columns>Remaining_Allocations__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>KCB</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Aug</value>
        </filters>
        <label>KCB July</label>
    </ListView>